# visual-explainer

./: .env.example  .gitignore  README.md  pyproject.toml
outputs/videos/test-thread/: state.json
tests/: manim_test.py  simple_manim_generator.ipynb  test_agents.ipynb  test_baseagent_class.py
visual_explainer/: main.py  state.py
visual_explainer/agents/: __init__.py  agent.py  animator.py  planner.py  storyboarder.py
visual_explainer/agents/prompts/: animator.py  planner.py  storyboarder.py
visual_explainer/tools/: manim_execute.py
